--- a/index.html
+++ b/index.html
@@ -5,8 +5,29 @@
     <title>HTML Academy: Девайс</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
+    <header class="page-header">
+      <nav class="navigation">
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <form action="https://echo.htmlacademy.ru/courses" method="get">
+              <input type="text" name="Поиск по сайту" id="find-button" value="Поиск по сайту">
+              <label for="find-button">
+               <a class="navigation-link" href="https://echo.htmlacademy.ru/courses">Найти</a>
+              </label>
+              </input>
+            </form>
+          </li>
+          <li>
+            <a class="navigation-link" href="#">Войти</a>    <!-- Добавить форму  -->
+          </li>
+          <li>
+            <a class="navigation-link" href="#">Сравнить</a>   <!-- Добавить форму  -->
+          </li>
+          <li>
+            <a class="navigation-link" href="#">Корзина</a>     <!-- Добавить форму  -->
+          </li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
