--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
           <li>
             <a class="navigation-link" href="#">Корзина</a>     <!-- Добавить форму  -->
           </li>
+          <li>
+            <a class="navigation-link" href="#">Каталог</a>     <!-- Добавить форму  -->
+          </li>
+          <li>
+            <a class="navigation-link" href="#">Доставка</a>     <!-- Добавить форму  -->
+          </li>
+          <li>
+            <a class="navigation-link" href="#">Гарантия</a>     <!-- Добавить форму  -->
+          </li>
+          <li>
+            <a class="navigation-link" href="#">Контакты</a>     <!-- Добавить форму  -->
+          </li>
         </ul>
       </nav>
     </header>
