--- a/index.html
+++ b/index.html
@@ -41,5 +41,33 @@
         </ul>
       </nav>
     </header>
+    <main class="main-index">
+      <h1 class="device-title">Порхает как бабочка,
+        жалит как пчела!</h1>
+        <p class="device-destription">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
+        </p>
+        <a class="details-button" href="#">Подробнее</a>
+        <h2 class="visually-hidden">Преимущества</h2>            <!-- Не должно быть видно строку преимущество  -->
+        <ul class="adventages">
+          <li>
+            <h3>800 м</h3>
+            <p>Дальность полета</p>
+          </li>
+          <li>
+            <h3>50 м</h3>
+            <p>Радиус поражения</p>
+          </li>
+        </ul>
+        <section class="catalog">
+        <ul class="catalog-item">
+          <li>Виртуальная реальность</li>
+          <li>Моноподы для селфи</li>
+          <li>Экшн-камеры</li>
+          <li>Фитнес-браслеты</li>
+          <li>Умные часы</li>
+          <li>Квадрокоптеры</li>
+        </ul>
+      </section>
+    </main>
   </body>
 </html>
