--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
-            <form action="https://echo.htmlacademy.ru/courses" method="get">
-              <input type="text" name="Поиск по сайту" id="find-button" value="Поиск по сайту">
+            <form class="site-search" action="https://echo.htmlacademy.ru/courses" method="get">
+              <input type="text" name="site-search" id="find-button" placeholder="Поиск по сайту">
               <label for="find-button">
-               <a class="navigation-link" href="https://echo.htmlacademy.ru/courses">Найти</a>
+               <button class="navigation-link" href="https://echo.htmlacademy.ru/courses">Найти</button>
               </label>
               </input>
             </form>
