--- a/index.html
+++ b/index.html
@@ -42,12 +42,19 @@
       </nav>
     </header>
     <main class="main-index">
+      <img class="slider-image" src="" alt="Квадракоптер с лазером">
+      <button class="slider-button slader-preview" type="button">
+        <span class="visually-hidden">Предыдущее фото</span>
+      </button>
+      <button class="slider-button slider-next" type="button">
+        <span class="visually-hidden">Следующее фото</span>
+      </button>
       <h1 class="device-title">Порхает как бабочка,
         жалит как пчела!</h1>
         <p class="device-destription">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
         </p>
         <a class="details-button" href="#">Подробнее</a>
-        <h2 class="visually-hidden">Преимущества.</h2>            <!-- Не должно быть видно строку преимущество  -->
+        <h2 class="visually-hidden">Преимущества.</h2>
         <ul class="adventages">
           <li>
             <h3>800 м</h3>
@@ -60,14 +67,20 @@
         </ul>
         <section class="catalog" >
           <h2 class="visually-hidden">Список товаров.</h2>
-          <ul class="catalog-item">
-          <li>Виртуальная реальность</li>
-          <li>Моноподы для селфи</li>
-          <li>Экшн-камеры</li>
-          <li>Фитнес-браслеты</li>
-          <li>Умные часы</li>
-          <li>Квадрокоптеры</li>
-        </ul>
+           <ul class="catalog-item">
+             <li>Виртуальная реальность</li>
+             <img class="category-1" src="" alt="Шлемы виртуальной реальности.">
+             <li>Моноподы для селфи</li>
+             <img class="category-2" src="" alt="Моноподы для селфи">
+             <li>Экшн-камеры</li>
+             <img class="category-3" src="" alt="Экшн Камеры">
+             <li>Фитнес-браслеты</li>
+             <img class="category-4" src="" alt="Фитнес браслеты">
+             <li>Умные часы</li>
+             <img class="category-5" src="" alt="Умные часы">
+             <li>Квадрокоптеры</li>
+             <img class="category-6" src="" alt="Квадракоптеры">
+           </ul>
       </section>
     </main>
   </body>
