--- a/index.html
+++ b/index.html
@@ -49,6 +49,24 @@
       <button class="slider-button slider-next" type="button">
         <span class="visually-hidden">Следующее фото</span>
       </button>
+
+      <ol class="slider-list">
+        <li class="slider-item">
+          <button class="slider-button" type="button">
+            <span class="visually-hidden">1 фото</span>
+          </button>
+        </li>
+        <li class="slider-item">
+          <button class="slider-button" type="button">
+            <span class="visually-hidden">2 фото</span>
+          </button>
+        </li>
+        <li class="slider-item">
+          <button class="slider-button" type="button">
+            <span class="visually-hidden">3 фото</span>
+          </button>
+        </li>
+
       <h1 class="device-title">Порхает как бабочка,
         жалит как пчела!</h1>
         <p class="device-destription">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
@@ -82,6 +100,30 @@
              <img class="category-6" src="" alt="Квадракоптеры">
            </ul>
       </section>
+      <section class="services">
+        <h2 class="visually-hidden">Перечень услуг</h2>
+        <ul class="service-list">
+          <li class="service-item">
+            <b class="delivety">Доставка</b>                  <!-- Нужно ли сюда добавлять классы?  -->
+            <h1 class="delivery-title">Доставка</h1>
+            <p class="delivery-discription">Мы с удовольствием доставим ваш товар прямо
+              к вашему подъезду совершенно бесплатно! Ведь
+              мы неплохо заработаем, поднимая его на ваш этаж.</p>
+            <img class="delivery-image" src="" alt="Картинка доставки">
+          </li>
+          <li class="service-item">
+            <b class="garanty">Гарантия</b>
+          </li>
+          <li class="service-item">
+            <b class="credit">Кредит</b>
+          </li>
+        </ul>
+      </section>
+      <section class="delivery">
+        <img class="car-delivery" src="" alt="Картинка машины">
+        <b class=""
+      </section>
+
     </main>
   </body>
 </html>
