--- a/index.html
+++ b/index.html
@@ -121,7 +121,19 @@
       </section>
       <section class="delivery">
         <img class="car-delivery" src="" alt="Картинка машины">
-        <b class=""
+        <b class="rare-item">Доставим редкий товар под заказ</b>
+        <img class="info" src="" alt="Значок информации">
+      </section>
+      <section class="info-about-us">
+        <h1 class="about-us">О нас</h1>
+        <p>Огромный выбор гаджетов не оставит равнодушным<br> гика, который есть в каждом из нас.</p>
+        <p>Мы можем доставить ваш товар в самые отдалённые<br> уголки России транспортными компаниями:</p>
+        <ul class="delivery-service">
+          <li>Меловые линии</li>
+          <li>СДИК</li>
+          <li>ТоксБерри</li>
+        </ul>
+        <a class="more-about-us" href="#">Подробнее о нас</a>
       </section>
 
     </main>
