--- a/index.html
+++ b/index.html
@@ -135,7 +135,15 @@
         </ul>
         <a class="more-about-us" href="#">Подробнее о нас</a>
       </section>
-
+      <section class="contacts">
+        <h1 class="our-contacts">Контакты</h1>
+        <p>Вы можете забрать товар сами, заехав в наш офис.<br>Заодно сможете проверить работоспособность покупки.</p>
+        <h2 class="contact-online-store">Интернет-магазин «Девайс»</h2>
+        <p class="contact-adress">Санкт-Петербург, набережная реки Карповки, 5, литера П.<br>
+        <a class="contact-phone" href="tel:+78128121212">+7 (812) 812-12-12</a></p>
+        <p class="work-time">пн—пт: с 10:00 до 22:00<br>сб—вс: с 10:00 до 19:00</p>
+        <a class="more-about-us" href="#">Напишите нам</a>
+      </section>
     </main>
   </body>
 </html>
