--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
   </head>
+
+
   <body>
+    <h1 class="visually-hidden">Device</h1>
+    <img class="logo" src="" alt="Интернет-магазин Девайс">
     <header class="page-header">
       <nav class="navigation">
         <ul class="navigation-list">
@@ -66,7 +70,7 @@
             <span class="visually-hidden">3 фото</span>
           </button>
         </li>
-
+      </ol>
       <h1 class="device-title">Порхает как бабочка,
         жалит как пчела!</h1>
         <p class="device-destription">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
@@ -89,15 +93,15 @@
              <li>Виртуальная реальность</li>
              <img class="category-1" src="" alt="Шлемы виртуальной реальности.">
              <li>Моноподы для селфи</li>
-             <img class="category-2" src="" alt="Моноподы для селфи">
+               <img class="category-2" src="" alt="Моноподы для селфи">
              <li>Экшн-камеры</li>
-             <img class="category-3" src="" alt="Экшн Камеры">
+               <img class="category-3" src="" alt="Экшн Камеры">
              <li>Фитнес-браслеты</li>
-             <img class="category-4" src="" alt="Фитнес браслеты">
+               <img class="category-4" src="" alt="Фитнес браслеты">
              <li>Умные часы</li>
-             <img class="category-5" src="" alt="Умные часы">
+               <img class="category-5" src="" alt="Умные часы">
              <li>Квадрокоптеры</li>
-             <img class="category-6" src="" alt="Квадракоптеры">
+               <img class="category-6" src="" alt="Квадракоптеры">
            </ul>
       </section>
       <section class="services">
@@ -125,7 +129,7 @@
         <img class="info" src="" alt="Значок информации">
       </section>
       <section class="info-about-us">
-        <h1 class="about-us">О нас</h1>
+        <h2 class="about-us">О нас</h2>
         <p>Огромный выбор гаджетов не оставит равнодушным<br> гика, который есть в каждом из нас.</p>
         <p>Мы можем доставить ваш товар в самые отдалённые<br> уголки России транспортными компаниями:</p>
         <ul class="delivery-service">
@@ -136,7 +140,7 @@
         <a class="more-about-us" href="#">Подробнее о нас</a>
       </section>
       <section class="contacts">
-        <h1 class="our-contacts">Контакты</h1>
+        <h2 class="our-contacts">Контакты</h2>
         <p>Вы можете забрать товар сами, заехав в наш офис.<br>Заодно сможете проверить работоспособность покупки.</p>
         <h2 class="contact-online-store">Интернет-магазин «Девайс»</h2>
         <p class="contact-adress">Санкт-Петербург, набережная реки Карповки, 5, литера П.<br>
@@ -144,6 +148,19 @@
         <p class="work-time">пн—пт: с 10:00 до 22:00<br>сб—вс: с 10:00 до 19:00</p>
         <a class="more-about-us" href="#">Напишите нам</a>
       </section>
+    <section class="newsletter-email">
+      <h2 class="subscribe-newsletter">Подпишитесь<br>на рассылку</h2>
+      <p class="weekly-newsletter">Еженедельный дайджест с обзорами новинок,<br>длительными тест-драйвами, распаковками, а также акции,<br>
+         спецпредложения и вот это вот всё.</p>
+         <form class="newletter-form" action="https://echo.htmlacademy.ru/courses" method="post">
+          <label for="subscribe"></label>
+          <input type="text" name="newsletter" id="subscribe" placeholder="Ваш e-mail">
+           <button class="navigation-link" type="submit">
+            <span>Подписаться</span>
+           </button>
+          <p class="free-newsletter">Это бесплатно</p>
+          <img class="check-mark" src="" alt="Зеленая галочка">
+    </section>
     </main>
   </body>
 </html>
