--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 
   <body>
-    <h1 class="visually-hidden">Device</h1>
+    <h2 class="visually-hidden">Device</h2>
     <img class="logo" src="" alt="Интернет-магазин Девайс">
     <header class="page-header">
       <nav class="navigation">
@@ -162,5 +162,41 @@
           <img class="check-mark" src="" alt="Зеленая галочка">
     </section>
     </main>
+    <footer class="page-footer">
+      <h2 class="visually-hidden">Device</h2>
+    <img class="logo" src="" alt="Интернет-магазин Девайс">
+    <p class="contact-adress">Санкт-Петербург, набережная<br>реки Карповки, 5, литера П.
+    <ul class="navigation-footer">
+      <li>
+        <a class="navigation-footer-list" href="#">Доставка</a>
+      </li>
+      <li>
+        <a class="navigation-footer-list" href="#">Гарантия</a>
+      </li>
+      <li>
+        <a class="navigation-footer-list" href="#">Контакты</a>
+      </li>
+    </ul>
+    <a class="contact-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+    <section class="footer-social">
+      <h2 class="vissualy-hidden">Социальальные сети</h2>
+      <ul class="social-list">
+        <li class="social-item">
+          <a class="button" href="#">
+            <span class="visually-hidden">Telegram</span>
+          </a>
+          <li class="social-item">
+            <a class="button" href="#">
+              <span class="visually-hidden">Youtube</span>
+            </a>
+            <li class="social-item">
+              <a class="button" href="#">
+                <span class="visually-hidden">Twitter</span>
+              </a>
+        </li>
+      </ul>
+      <p class="about-text"><a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a></p>
+    </section>
+    </footer>
   </body>
 </html>
