--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
             <input type="text" name="newsletter" id="subscribe" placeholder="Ваш e-mail">
             <button class="navigation-link" type="submit">
             <span>Подписаться</span>
+            </form>
             </button>
             <p class="free-newsletter">Это бесплатно</p>
             <img class="check-mark" src="" alt="Зеленая галочка">
