--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   <a class="navigation-link" href="#">Корзина</a>     <!-- Добавить форму  -->
                </li>
                <li>
-                  <a class="navigation-link" href="#">Каталог</a>     <!-- Добавить форму  -->
+                  <a class="navigation-link" href="catalog.html">Каталог товаров</a>     <!-- Добавить форму  -->
                </li>
                <li>
                   <a class="navigation-link" href="#">Доставка</a>     <!-- Добавить форму  -->
