--- a/catalog.html
+++ b/catalog.html
@@ -28,25 +28,25 @@
                         </form>
                      </li>
                      <li>
-                        <a class="navigation-link" href="#">Выйти</a>    <!-- Добавить форму  -->
+                        <a class="navigation-link" href="#">Выйти</a>
                      </li>
                      <li>
-                        <a class="navigation-link" href="#">Сравнить</a>   <!-- Добавить форму  -->
+                        <a class="navigation-link" href="#">Сравнить</a>
                      </li>
                      <li>
-                        <a class="navigation-link" href="#">Корзина</a>     <!-- Добавить форму  -->
+                        <a class="navigation-link" href="#">Корзина</a>
                      </li>
                      <li>
-                        <a class="navigation-link" href="#">Каталог товаров</a>     <!-- Добавить форму  -->
+                        <a class="navigation-link" href="#">Каталог товаров</a>
                      </li>
                      <li>
-                        <a class="navigation-link" href="#">Доставка</a>     <!-- Добавить форму  -->
+                        <a class="navigation-link" href="#">Доставка</a>
                      </li>
                      <li>
-                        <a class="navigation-link" href="#">Гарантия</a>     <!-- Добавить форму  -->
+                        <a class="navigation-link" href="#">Гарантия</a>
                      </li>
                      <li>
-                        <a class="navigation-link" href="#">Контакты</a>     <!-- Добавить форму  -->
+                        <a class="navigation-link" href="#">Контакты</a>
                      </li>
                   </ul>
                </nav>
