--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
    </head>
    <body>
       <h2 class="visually-hidden">Device</h2>
-      <img class="logo" src="" alt="Интернет-магазин Девайс">
+      <img class="logo" src="images/logo.svg" alt="Показывает логотип Интернет-магазин Девайс." width="145" height="36">
       <header class="page-header">
          <nav class="navigation">
             <ul class="navigation-list">
                <li class="navigation-item">
                   <form class="site-search-form" action="https://echo.htmlacademy.ru/courses" method="get">
                      <label for="find-button"></label>
+                     <img class="logo" src="images/search-glass.svg" alt="Показывает поиск по сайту." width="16" height="16">
                      <input type="text" name="site-search" id="find-button" placeholder="Поиск по сайту">
                      <button class="navigation-link" type="submit">
                      <span>Найти</span>
@@ -46,25 +47,25 @@
       <main class="main-index">
          <img class="slider-image" src="" alt="Квадракоптер с лазером">
          <button class="slider-button slader-preview" type="button">
-         <span class="visually-hidden">Предыдущее фото</span>
+         <span class="visually-hidden">Предыдущее фото.</span>
          </button>
          <button class="slider-button slider-next" type="button">
-         <span class="visually-hidden">Следующее фото</span>
+         <span class="visually-hidden">Следующее фото.</span>
          </button>
          <ol class="slider-list">
             <li class="slider-item">
                <button class="slider-button" type="button">
-               <span class="visually-hidden">1 фото</span>
+               <span class="visually-hidden">1 фото.</span>
                </button>
             </li>
             <li class="slider-item">
                <button class="slider-button" type="button">
-               <span class="visually-hidden">2 фото</span>
+               <span class="visually-hidden">2 фото.</span>
                </button>
             </li>
             <li class="slider-item">
                <button class="slider-button" type="button">
-               <span class="visually-hidden">3 фото</span>
+               <span class="visually-hidden">3 фото.</span>
                </button>
             </li>
          </ol>
@@ -103,10 +104,10 @@
             </ul>
          </section>
          <section class="services">
-            <h2 class="visually-hidden">Перечень услуг</h2>
+            <h2 class="visually-hidden">Перечень услуг.</h2>
             <ul class="service-list">
                <li class="service-item">
-                  <b class="delivety">Доставка</b>                  <!-- Нужно ли сюда добавлять классы?  -->
+                  <b class="delivety">Доставка</b>
                   <h1 class="delivery-title">Доставка</h1>
                   <p class="delivery-discription">Мы с удовольствием доставим ваш товар прямо
                      к вашему подъезду совершенно бесплатно! Ведь
@@ -165,7 +166,7 @@
          </section>
       </main>
       <footer class="page-footer">
-         <h2 class="visually-hidden">Device</h2>
+         <h2 class="visually-hidden">Device.</h2>
          <img class="logo" src="" alt="Интернет-магазин Девайс">
          <p class="contact-adress">Санкт-Петербург, набережная<br>реки Карповки, 5, литера П.
          <ul class="navigation-footer">
@@ -181,19 +182,19 @@
          </ul>
          <a class="contact-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
          <section class="footer-social">
-            <h2 class="vissualy-hidden">Социальальные сети</h2>
+            <h2 class="vissualy-hidden">Социальальные сет.и</h2>
             <ul class="social-list">
                <li class="social-item">
                   <a class="button" href="#">
-                  <span class="visually-hidden">Telegram</span>
+                  <span class="visually-hidden">Telegram.</span>
                   </a>
                <li class="social-item">
                   <a class="button" href="#">
-                  <span class="visually-hidden">Youtube</span>
+                  <span class="visually-hidden">Youtube.</span>
                   </a>
                <li class="social-item">
                   <a class="button" href="#">
-                  <span class="visually-hidden">Twitter</span>
+                  <span class="visually-hidden">Twitter.</span>
                   </a>
                </li>
             </ul>
