--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
                   </form>
                </li>
                <li>
-                  <a class="navigation-link" href="#">Войти</a>    <!-- Добавить форму  -->
+                <img class="logo" src="images/person-area.svg" alt="Показывает иконку Личного кабинета." width="13" height="12">
+                  <a class="navigation-link" href="#">Войти</a>
                </li>
                <li>
-                  <a class="navigation-link" href="#">Сравнить</a>   <!-- Добавить форму  -->
+                  <a class="navigation-link" href="#">Сравнить</a>
                </li>
                <li>
-                  <a class="navigation-link" href="#">Корзина</a>     <!-- Добавить форму  -->
+                  <a class="navigation-link" href="#">Корзина</a>
                </li>
                <li>
-                  <a class="navigation-link" href="catalog.html">Каталог товаров</a>     <!-- Добавить форму  -->
+                  <a class="navigation-link" href="catalog.html">Каталог товаров</a>
                </li>
                <li>
-                  <a class="navigation-link" href="#">Доставка</a>     <!-- Добавить форму  -->
+                  <a class="navigation-link" href="#">Доставка</a>
+               <li>
+                  <a class="navigation-link" href="#">Гарантия</a>
                </li>
                <li>
-                  <a class="navigation-link" href="#">Гарантия</a>     <!-- Добавить форму  -->
-               </li>
-               <li>
-                  <a class="navigation-link" href="#">Контакты</a>     <!-- Добавить форму  -->
+                  <a class="navigation-link" href="#">Контакты</a>
                </li>
             </ul>
          </nav>
