add new icon for project

--- a/index.html
+++ b/index.html
@@ -13,25 +13,27 @@
                <li class="navigation-item">
                   <form class="site-search-form" action="https://echo.htmlacademy.ru/courses" method="get">
                      <label for="find-button"></label>
-                     <img class="logo" src="images/search-glass.svg" alt="Показывает поиск по сайту." width="16" height="16">
                      <input type="text" name="site-search" id="find-button" placeholder="Поиск по сайту">
+                     <img class="search-site" src="images/search-glass.svg" alt="Показывает поиск по сайту." width="16" height="16">
                      <button class="navigation-link" type="submit">
                      <span>Найти</span>
                      </button>
                   </form>
                </li>
                <li>
-                <img class="logo" src="images/person-area.svg" alt="Показывает иконку Личного кабинета." width="13" height="12">
                   <a class="navigation-link" href="#">Войти</a>
+                    <img class="person-area" src="images/person-area.svg" alt="Показывает иконку Личного кабинета." width="13" height="12">
                </li>
                <li>
                   <a class="navigation-link" href="#">Сравнить</a>
+                  <img class="comparison" src="images/comparison.svg" alt="Показывает значок сравнения товаров." width="10" height="12">
                </li>
                <li>
                   <a class="navigation-link" href="#">Корзина</a>
                </li>
                <li>
                   <a class="navigation-link" href="catalog.html">Каталог товаров</a>
+                  <img src="images/plus.svg" alt="Показывает Каталог." width="16" height="16">
                </li>
                <li>
                   <a class="navigation-link" href="#">Доставка</a>
@@ -45,7 +47,7 @@
          </nav>
       </header>
       <main class="main-index">
-         <img class="slider-image" src="" alt="Квадракоптер с лазером">
+         <img src="images/slider-1.png" alt="Квадракоптер с лазером" width="560" height="560px">
          <button class="slider-button slader-preview" type="button">
          <span class="visually-hidden">Предыдущее фото.</span>
          </button>
