--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
          <img src="images/slider-1.png" alt="Квадракоптер с лазером" width="560" height="560px">
          <button class="slider-button slader-preview" type="button">
          <span class="visually-hidden">Предыдущее фото.</span>
+         <img src="images/icon-arrow-left.svg" alt="Показывает стрелку для того чтобы перелестнуть слайдер влево." width="20" height="60"> <!--не показывается кнопка-->
          </button>
          <button class="slider-button slider-next" type="button">
          <span class="visually-hidden">Следующее фото.</span>
+         <img src="images/icon-arrow-rigth.svg" alt="Показывает стрелку для того чтобы перелестнуть слайдер вправо." width="20" height="60"> <!--не показывается кнопка-->
          </button>
          <ol class="slider-list">
             <li class="slider-item">
@@ -92,17 +94,18 @@
             <h2 class="visually-hidden">Список товаров.</h2>
             <ul class="catalog-item">
                <li>Виртуальная реальность</li>
-               <img class="category-1" src="" alt="Шлемы виртуальной реальности.">
+               <img class="category-1" src="images/virtual-glass.svg" alt="Шлемы виртуальной реальности." width="
+               96.95" height="54.99">
                <li>Моноподы для селфи</li>
-               <img class="category-2" src="" alt="Моноподы для селфи">
+               <img class="category-2" src="images/action-camera.svg " alt="Моноподы для селфи" width="85.87" height="117">
                <li>Экшн-камеры</li>
-               <img class="category-3" src="" alt="Экшн Камеры">
+               <img class="category-3" src="images/action-camera.svg" alt="Экшн Камеры" width="71.02" height="87">
                <li>Фитнес-браслеты</li>
-               <img class="category-4" src="" alt="Фитнес браслеты">
+               <img class="category-4" src="images/fitnes-band.svg" alt="Фитнес браслеты" width="107.31" height="64.99">
                <li>Умные часы</li>
-               <img class="category-5" src="" alt="Умные часы">
+               <img class="category-5" src="images/watch.svg" alt="Умные часы" width="56.01" height="97.98">
                <li>Квадрокоптеры</li>
-               <img class="category-6" src="" alt="Квадракоптеры">
+               <img class="category-6" src="images/quadrocopter.svg" alt="Квадракоптеры" width="132.03" height="69.01">
             </ul>
          </section>
          <section class="services">
@@ -115,7 +118,7 @@
                      к вашему подъезду совершенно бесплатно! Ведь
                      мы неплохо заработаем, поднимая его на ваш этаж.
                   </p>
-                  <img class="delivery-image" src="" alt="Картинка доставки">
+                  <img class="delivery-image" src="images/man-delivery.svg" alt="" width="136" height="164">
                </li>
                <li class="service-item">
                   <b class="garanty">Гарантия</b>
@@ -126,7 +129,7 @@
             </ul>
          </section>
          <section class="delivery">
-            <img class="car-delivery" src="" alt="Картинка машины">
+            <img class="car-delivery" src="images/car-delivery.svg" alt="">
             <b class="rare-item">Доставим редкий товар под заказ</b>
             <img class="info" src="" alt="Значок информации">
          </section>
@@ -164,12 +167,12 @@
             </form>
             </button>
             <p class="free-newsletter">Это бесплатно</p>
-            <img class="check-mark" src="" alt="Зеленая галочка">
+            <img class="check-mark" src="images/icon-check.svg" alt="Зеленая галочка" width="14" height="14">
          </section>
       </main>
       <footer class="page-footer">
          <h2 class="visually-hidden">Device.</h2>
-         <img class="logo" src="" alt="Интернет-магазин Девайс">
+         <img class="logo" src="images/logo-footer.svg" alt="Интернет-магазин Девайс" width="145" height="36">
          <p class="contact-adress">Санкт-Петербург, набережная<br>реки Карповки, 5, литера П.
          <ul class="navigation-footer">
             <li>
@@ -190,17 +193,21 @@
                   <a class="button" href="#">
                   <span class="visually-hidden">Telegram.</span>
                   </a>
+                  <img src="images/icon-telegram.svg" alt="Значок Telegram." width="13.34" height="11.19">
                <li class="social-item">
                   <a class="button" href="#">
                   <span class="visually-hidden">Youtube.</span>
                   </a>
+                  <img src="images/icon-youtube.svg" alt="Значок Youtube." width="16" height="10.67">
                <li class="social-item">
                   <a class="button" href="#">
                   <span class="visually-hidden">Twitter.</span>
                   </a>
+                  <img src="images/icon-twitter.svg" alt="Значок twitter." width="15" height="14.06">
                </li>
             </ul>
             <p class="about-text"><a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a></p>
+            <img src="images/html-academy-logo.svg" alt="Логотип HTML Academy." width="114.9" height="32.9">
          </section>
       </footer>
    </body>
