add image in catalog

--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
          </head>
          <body>
             <a class="navigation-logo" href="index.html">
-            <img class="logo" src="" alt="Интернет-магазин Девайс">
+              <img class="logo" src="images/logo.svg" alt="Показывает логотип Интернет-магазин Девайс." width="145" height="36">
             </a>
             <header class="page-header">
                <nav class="navigation">
@@ -22,6 +22,7 @@
                         <form class="site-search-form" action="https://echo.htmlacademy.ru/courses" method="get">
                            <label for="find-button"></label>
                            <input type="text" name="site-search" id="find-button" placeholder="Текст поиска">
+                           <img class="search-site" src="images/search-glass.svg" alt="Показывает поиск по сайту." width="16" height="16">
                            <button class="navigation-link" type="submit">
                            <span>Найти</span>
                            </button>
@@ -29,15 +30,19 @@
                      </li>
                      <li>
                         <a class="navigation-link" href="#">Выйти</a>
+                        <img class="person-area" src="images/person-area.svg" alt="Показывает иконку Личного кабинета." width="13" height="12">
                      </li>
                      <li>
                         <a class="navigation-link" href="#">Сравнить</a>
+                        <img class="comparison" src="images/comparison.svg" alt="Показывает значок сравнения товаров." width="10" height="12">
                      </li>
                      <li>
                         <a class="navigation-link" href="#">Корзина</a>
+                        <img class="comparison" src="images/basket.svg" alt="Показывает значок корзины." width="16" height="14">
                      </li>
                      <li>
                         <a class="navigation-link" href="#">Каталог товаров</a>
+                        <img src="images/plus.svg" alt="Показывает Каталог." width="16" height="16">
                      </li>
                      <li>
                         <a class="navigation-link" href="#">Доставка</a>
@@ -129,9 +134,11 @@
                   </select>
                   <a class="button" href="#">
                   <span class="vissualy-hidden">Кнопка выше</span>
+                  <img src="images/icon-threetangle-up.svg" alt="Показывает кнопку выше для перемещения по сайту." width="11" height="10">
                   </a>
                   <a class="button" href="#">
                   <span class="vissualy-hidden">Кнопка Ниже</span>
+                  <img src="images/icon-threetangle-down.svg" alt="Показывает кнопку ниже для перемещения по сайту." width="11" height="10">
                   </a>
                   <ul class="product-card">
                   <li class="product-card-list">
