--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                </li>
                <li>
                   <a class="navigation-link" href="#">Корзина</a>
+                  <img class="comparison" src="images/basket.svg" alt="Показывает значок корзины." width="16" height="14">
                </li>
                <li>
                   <a class="navigation-link" href="catalog.html">Каталог товаров</a>
@@ -192,18 +193,21 @@
                <li class="social-item">
                   <a class="button" href="#">
                   <span class="visually-hidden">Telegram.</span>
-                  </a>
                   <img src="images/icon-telegram.svg" alt="Значок Telegram." width="13.34" height="11.19">
+                  </a>
+
                <li class="social-item">
                   <a class="button" href="#">
                   <span class="visually-hidden">Youtube.</span>
-                  </a>
                   <img src="images/icon-youtube.svg" alt="Значок Youtube." width="16" height="10.67">
+                  </a>
+
                <li class="social-item">
                   <a class="button" href="#">
                   <span class="visually-hidden">Twitter.</span>
-                  </a>
                   <img src="images/icon-twitter.svg" alt="Значок twitter." width="15" height="14.06">
+                  </a>
+
                </li>
             </ul>
             <p class="about-text"><a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a></p>
