add image and small correct

--- a/catalog.html
+++ b/catalog.html
@@ -143,7 +143,7 @@
                   <ul class="product-card">
                   <li class="product-card-list">
                      <a class="product-card-link" href="product.html">
-                        <img class="product-card-image" src="" alt="Любительская селфи-палка">
+                        <img class="product-card-image" src="images/selfie-fan.png" alt="Любительская селфи-палка" width="360" height="380">
                         <h3 class="product-card-title">Любительская
                            селфи-палка
                         </h3>
@@ -152,14 +152,14 @@
                   </li>
                   <li class="product-card-list">
                      <a class="product-card-link" href="product.html">
-                        <img class="product-card-image" src="" alt="Любительская селфи-палка">
+                        <img class="product-card-image" src="images/selfie-profissional.png" alt="Профессиональная селфи-палка" width="360" height="380">
                         <h3 class="product-card-title">Профессиональная селфи-палка </h3>
                      </a>
                      <b class="product-card-price">1 500 ₽ ₽</b>
                   </li>
                   <li class="product-card-list">
                      <a class="product-card-link" href="product.html">
-                        <img class="product-card-image" src="" alt="Любительская селфи-палка">
+                        <img class="product-card-image" src="images/selfie-waterproof.png" alt="Непотопляемая селфи-палка" width="360" height="380">
                         <h3 class="product-card-title">Непотопляемая
                            селфи-палка
                         </h3>
@@ -168,7 +168,7 @@
                   </li>
                   <li class="product-card-list">
                      <a class="product-card-link" href="product.html">
-                        <img class="product-card-image" src="" alt="Любительская селфи-палка">
+                        <img class="product-card-image" src="images/selfie-followme.png" alt="Селфи-палка следуй за мной" width="360" height="380">
                         <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
                      </a>
                      <b class="product-card-price">1 500 ₽ ₽</b>
@@ -203,7 +203,7 @@
             </main>
             <footer class="page-footer">
                <h2 class="visually-hidden">Device</h2>
-               <img class="logo" src="" alt="Интернет-магазин Девайс">
+               <img class="logo" src="images/logo-footer.svg" alt="Интернет-магазин Девайс" width="145" height="36">
                <p class="contact-adress">Санкт-Петербург, набережная<br>реки Карповки, 5, литера П.
                <ul class="navigation-footer">
                   <li>
@@ -223,18 +223,22 @@
                      <li class="social-item">
                         <a class="button" href="#">
                         <span class="visually-hidden">Telegram</span>
+                        <img src="images/icon-telegram.svg" alt="Значок Telegram." width="13.34" height="11.19">
                         </a>
                      <li class="social-item">
                         <a class="button" href="#">
                         <span class="visually-hidden">Youtube</span>
+                        <img src="images/icon-youtube.svg" alt="Значок Youtube." width="16" height="10.67">
                         </a>
                      <li class="social-item">
                         <a class="button" href="#">
                         <span class="visually-hidden">Twitter</span>
+                        <img src="images/icon-twitter.svg" alt="Значок twitter." width="15" height="14.06">
                         </a>
                      </li>
                   </ul>
                   <p class="about-text"><a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a></p>
+                  <img src="images/html-academy-logo.svg" alt="Логотип HTML Academy." width="114.9" height="32.9">
                </section>
             </footer>
          </body>
