--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
          <img src="images/slider-1.png" alt="Квадракоптер с лазером" width="560" height="560px">
          <button class="slider-button slader-preview" type="button">
          <span class="visually-hidden">Предыдущее фото.</span>
-         <img src="images/icon-arrow-left.svg" alt="Показывает стрелку для того чтобы перелестнуть слайдер влево." width="20" height="60"> <!--не показывается кнопка-->
+         <img src="images/icon-arrow-left.svg" alt="Показывает стрелку для того чтобы перелестнуть слайдер влево." width="20" height="60">
          </button>
          <button class="slider-button slider-next" type="button">
          <span class="visually-hidden">Следующее фото.</span>
-         <img src="images/icon-arrow-rigth.svg" alt="Показывает стрелку для того чтобы перелестнуть слайдер вправо." width="20" height="60"> <!--не показывается кнопка-->
+         <img src="images/icon-arrow-rigth.svg" alt="Показывает стрелку для того чтобы перелестнуть слайдер вправо." width="20" height="60">
          </button>
          <ol class="slider-list">
             <li class="slider-item">
@@ -188,7 +188,7 @@
          </ul>
          <a class="contact-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
          <section class="footer-social">
-            <h2 class="vissualy-hidden">Социальальные сет.и</h2>
+            <h2 class="vissualy-hidden">Социальальные сети.</h2>
             <ul class="social-list">
                <li class="social-item">
                   <a class="button" href="#">
