--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
                   <img class="comparison" src="images/basket.svg" alt="Показывает значок корзины." width="16" height="14">
                </li>
                <li>
-                  <a class="navigation-link" href="catalog.html">Каталог товаров</a>
+                  <a class="navigation-link-2" href="catalog.html">Каталог товаров</a>
                   <img src="images/plus.svg" alt="Показывает Каталог." width="16" height="16">
                </li>
                <li>
-                  <a class="navigation-link" href="#">Доставка</a>
+                  <a class="navigation-link-2" href="#">Доставка</a>
                <li>
-                  <a class="navigation-link" href="#">Гарантия</a>
+                  <a class="navigation-link-2" href="#">Гарантия</a>
                </li>
                <li>
-                  <a class="navigation-link" href="#">Контакты</a>
+                  <a class="navigation-link-2" href="#">Контакты</a>
                </li>
             </ul>
          </nav>
