--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
          </nav>
       </header>
       <main class="main-index">
-         <img src="images/slider-1.png" alt="Квадракоптер с лазером" width="560" height="560px">
+         <img src="images/slider-1.png" alt="Квадракоптер с лазером." width="560" height="560px">
          <button class="slider-button slader-preview" type="button">
          <span class="visually-hidden">Предыдущее фото.</span>
          <img src="images/icon-arrow-left.svg" alt="Показывает стрелку для того чтобы перелестнуть слайдер влево." width="20" height="60">
